- refactor the tests - cleanup of the dependencies