@@ -1,6 +1,5 @@
 package org.phoenicis.javafx.collections;
 
-import com.google.common.collect.ImmutableList;
 import javafx.beans.binding.Bindings;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -15,362 +14,357 @@ import static org.junit.Assert.assertEquals;
 public class ConcatenatedListTest {
     @Test
     public void testListCreation() {
-        ConcatenatedList<String> mappedList = ConcatenatedList
-                .create(Collections.singletonList("11"), Arrays.asList("21", "22"), Collections.emptyList());
-        List<String> actual = new ArrayList<>();
+        final ConcatenatedList<String> concatenatedList = ConcatenatedList
+                .create(Collections.singletonList("11"), List.of("21", "22"), Collections.emptyList());
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
     }
 
     @Test
     public void testListAdd() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.add(1, FXCollections.observableArrayList("01", "02"));
 
-        assertEquals(Arrays.asList("11", "01", "02", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "01", "02", "21", "22"), actual);
+        assertEquals(List.of("11", "01", "02", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "01", "02", "21", "22"), actual);
     }
 
     @Test
     public void testListAddDuplicate() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
         List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.add(0, FXCollections.observableArrayList("21", "22"));
 
-        assertEquals(Arrays.asList("21", "22", "11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("21", "22", "11", "21", "22"), actual);
+        assertEquals(List.of("21", "22", "11", "21", "22"), concatenatedList);
+        assertEquals(List.of("21", "22", "11", "21", "22"), actual);
     }
 
     @Test
     public void testListRemoveFirstList() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.remove(0);
 
-        assertEquals(Arrays.asList("21", "22"), mappedList);
-        assertEquals(Arrays.asList("21", "22"), actual);
+        assertEquals(List.of("21", "22"), concatenatedList);
+        assertEquals(List.of("21", "22"), actual);
     }
 
     @Test
     public void testListRemoveMiddleList() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.remove(1);
 
-        assertEquals(Collections.singletonList("11"), mappedList);
+        assertEquals(Collections.singletonList("11"), concatenatedList);
         assertEquals(Collections.singletonList("11"), actual);
     }
 
     @Test
     public void testListRemoveLastList() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.remove(2);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
     }
 
     @Test
     public void testListRemoveDuplicateList() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList("11")).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList("11")));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22", "11"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "11"), actual);
+        assertEquals(List.of("11", "21", "22", "11"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "11"), actual);
 
         observableList.remove(2);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.remove(0);
 
-        assertEquals(Arrays.asList("21", "22"), mappedList);
-        assertEquals(Arrays.asList("21", "22"), actual);
+        assertEquals(List.of("21", "22"), concatenatedList);
+        assertEquals(List.of("21", "22"), actual);
     }
 
     @Test
     public void testListUpdateLastList() {
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.set(2, FXCollections.observableArrayList("31", "32", "33"));
 
-        assertEquals(Arrays.asList("11", "21", "22", "31", "32", "33"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31", "32", "33"), actual);
+        assertEquals(List.of("11", "21", "22", "31", "32", "33"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31", "32", "33"), actual);
     }
 
     @Test
     public void testListUpdateViaFilteredList() {
-        FilteredList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList("31")).build())
+        final FilteredList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList("31")))
                 .filtered(value -> true);
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31"), actual);
+        assertEquals(List.of("11", "21", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31"), actual);
 
         observableList.setPredicate(value -> value.size() != 1);
 
-        assertEquals(Arrays.asList("21", "22"), mappedList);
-        assertEquals(Arrays.asList("21", "22"), actual);
+        assertEquals(List.of("21", "22"), concatenatedList);
+        assertEquals(List.of("21", "22"), actual);
 
         observableList.setPredicate(value -> true);
 
-        assertEquals(Arrays.asList("11", "21", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31"), actual);
+        assertEquals(List.of("11", "21", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31"), actual);
     }
 
     @Test
     public void testListPermutation() {
-        SortedList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(FXCollections.observableArrayList("11"))
-                        .add(FXCollections.observableArrayList("21", "22"))
-                        .add(FXCollections.observableArrayList()).build())
+        final SortedList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.<ObservableList<String>>of(
+                        FXCollections.observableArrayList("11"),
+                        FXCollections.observableArrayList("21", "22"),
+                        FXCollections.observableArrayList()))
                 .sorted(Comparator.comparing(List::size));
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
-        List<String> actual = new ArrayList<>();
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22"), actual);
+        assertEquals(List.of("11", "21", "22"), concatenatedList);
+        assertEquals(List.of("11", "21", "22"), actual);
 
         observableList.comparatorProperty().set(Comparator.<List<String>, Integer>comparing(List::size).reversed());
 
-        assertEquals(Arrays.asList("21", "22", "11"), mappedList);
-        assertEquals(Arrays.asList("21", "22", "11"), actual);
+        assertEquals(List.of("21", "22", "11"), concatenatedList);
+        assertEquals(List.of("21", "22", "11"), actual);
     }
 
     @Test
     public void testInnerListAdd() {
-        ObservableList<String> list1 = FXCollections.observableArrayList("11");
-        ObservableList<String> list2 = FXCollections.observableArrayList("21", "22");
-        ObservableList<String> list3 = FXCollections.observableArrayList("31");
+        final ObservableList<String> list1 = FXCollections.observableArrayList("11");
+        final ObservableList<String> list2 = FXCollections.observableArrayList("21", "22");
+        final ObservableList<String> list3 = FXCollections.observableArrayList("31");
 
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(list1).add(list2).add(list3).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(list1, list2, list3));
 
-        List<String> actual = new ArrayList<>();
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
 
-        Bindings.bindContent(actual, mappedList);
+        final List<String> actual = new ArrayList<>();
 
-        assertEquals(Arrays.asList("11", "21", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31"), actual);
+        Bindings.bindContent(actual, concatenatedList);
+
+        assertEquals(List.of("11", "21", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31"), actual);
 
         list2.add("23");
 
-        assertEquals(Arrays.asList("11", "21", "22", "23", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "23", "31"), actual);
+        assertEquals(List.of("11", "21", "22", "23", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "23", "31"), actual);
     }
 
     @Test
     public void testInnerListAddWithEqualInnerLists() {
-        ObservableList<String> list1 = FXCollections.observableArrayList("11");
-        ObservableList<String> list2 = FXCollections.observableArrayList("41");
-        ObservableList<String> list3 = FXCollections.observableArrayList("31");
-        ObservableList<String> list4 = FXCollections.observableArrayList();
+        final ObservableList<String> list1 = FXCollections.observableArrayList("11");
+        final ObservableList<String> list2 = FXCollections.observableArrayList("41");
+        final ObservableList<String> list3 = FXCollections.observableArrayList("31");
+        final ObservableList<String> list4 = FXCollections.observableArrayList();
 
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(list1).add(list2).add(list3).add(list4).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(list1, list2, list3, list4));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
 
-        List<String> actual = new ArrayList<>();
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "41", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "41", "31"), actual);
+        assertEquals(List.of("11", "41", "31"), concatenatedList);
+        assertEquals(List.of("11", "41", "31"), actual);
 
         // list2 and list4 are equal after the add operation
         list4.add("41");
 
-        assertEquals(Arrays.asList("11", "41", "31", "41"), mappedList);
-        assertEquals(Arrays.asList("11", "41", "31", "41"), actual);
+        assertEquals(List.of("11", "41", "31", "41"), concatenatedList);
+        assertEquals(List.of("11", "41", "31", "41"), actual);
     }
 
     @Test
     public void testInnerListRemove() {
-        ObservableList<String> list1 = FXCollections.observableArrayList("11");
-        ObservableList<String> list2 = FXCollections.observableArrayList("21", "22");
-        ObservableList<String> list3 = FXCollections.observableArrayList("31");
+        final ObservableList<String> list1 = FXCollections.observableArrayList("11");
+        final ObservableList<String> list2 = FXCollections.observableArrayList("21", "22");
+        final ObservableList<String> list3 = FXCollections.observableArrayList("31");
 
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(list1).add(list2).add(list3).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(list1, list2, list3));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
 
-        List<String> actual = new ArrayList<>();
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31"), actual);
+        assertEquals(List.of("11", "21", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31"), actual);
 
         list2.remove(0);
 
-        assertEquals(Arrays.asList("11", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "22", "31"), actual);
+        assertEquals(List.of("11", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "22", "31"), actual);
     }
 
     @Test
     public void testInnerListRemoveWithEqualInnerLists() {
-        ObservableList<String> list1 = FXCollections.observableArrayList("11");
-        ObservableList<String> list2 = FXCollections.observableArrayList();
-        ObservableList<String> list3 = FXCollections.observableArrayList("31");
-        ObservableList<String> list4 = FXCollections.observableArrayList("41");
+        final ObservableList<String> list1 = FXCollections.observableArrayList("11");
+        final ObservableList<String> list2 = FXCollections.observableArrayList();
+        final ObservableList<String> list3 = FXCollections.observableArrayList("31");
+        final ObservableList<String> list4 = FXCollections.observableArrayList("41");
 
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(list1).add(list2).add(list3).add(list4).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(list1, list2, list3, list4));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
 
-        List<String> actual = new ArrayList<>();
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "31", "41"), mappedList);
-        assertEquals(Arrays.asList("11", "31", "41"), actual);
+        assertEquals(List.of("11", "31", "41"), concatenatedList);
+        assertEquals(List.of("11", "31", "41"), actual);
 
         // list2 and list4 are equal after the clear operation
         list4.clear();
 
-        assertEquals(Arrays.asList("11", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "31"), actual);
+        assertEquals(List.of("11", "31"), concatenatedList);
+        assertEquals(List.of("11", "31"), actual);
     }
 
     @Test
     public void testInnerListUpdate() {
-        ObservableList<String> list1 = FXCollections.observableArrayList("11");
-        ObservableList<String> list2 = FXCollections.observableArrayList("21", "22");
-        ObservableList<String> list3 = FXCollections.observableArrayList("31");
+        final ObservableList<String> list1 = FXCollections.observableArrayList("11");
+        final ObservableList<String> list2 = FXCollections.observableArrayList("21", "22");
+        final ObservableList<String> list3 = FXCollections.observableArrayList("31");
 
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(list1).add(list2).add(list3).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(list1, list2, list3));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
 
-        List<String> actual = new ArrayList<>();
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31"), actual);
+        assertEquals(List.of("11", "21", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31"), actual);
 
         list2.set(0, "20");
 
-        assertEquals(Arrays.asList("11", "20", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "20", "22", "31"), actual);
+        assertEquals(List.of("11", "20", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "20", "22", "31"), actual);
     }
 
     @Test
     public void testInnerListPermute() {
-        ObservableList<String> list1 = FXCollections.observableArrayList("11");
-        SortedList<String> list2 = FXCollections.observableArrayList("21", "22").sorted();
-        ObservableList<String> list3 = FXCollections.observableArrayList("31");
+        final ObservableList<String> list1 = FXCollections.observableArrayList("11");
+        final SortedList<String> list2 = FXCollections.observableArrayList("21", "22").sorted();
+        final ObservableList<String> list3 = FXCollections.observableArrayList("31");
 
-        ObservableList<ObservableList<String>> observableList = FXCollections
-                .observableArrayList(ImmutableList.<ObservableList<String>>builder()
-                        .add(list1).add(list2).add(list3).build());
-        ConcatenatedList<String> mappedList = new ConcatenatedList<>(observableList);
+        final ObservableList<ObservableList<String>> observableList = FXCollections
+                .observableArrayList(List.of(list1, list2, list3));
+        final ConcatenatedList<String> concatenatedList = new ConcatenatedList<>(observableList);
 
-        List<String> actual = new ArrayList<>();
+        final List<String> actual = new ArrayList<>();
 
-        Bindings.bindContent(actual, mappedList);
+        Bindings.bindContent(actual, concatenatedList);
 
-        assertEquals(Arrays.asList("11", "21", "22", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "21", "22", "31"), actual);
+        assertEquals(List.of("11", "21", "22", "31"), concatenatedList);
+        assertEquals(List.of("11", "21", "22", "31"), actual);
 
         list2.setComparator(Comparator.reverseOrder());
 
-        assertEquals(Arrays.asList("11", "22", "21", "31"), mappedList);
-        assertEquals(Arrays.asList("11", "22", "21", "31"), actual);
+        assertEquals(List.of("11", "22", "21", "31"), concatenatedList);
+        assertEquals(List.of("11", "22", "21", "31"), actual);
     }
 }
